--- a/Dockerfile.onebuild
+++ b/Dockerfile.onebuild
@@ -1,4 +1,4 @@
-FROM golang:1.9.1 as builder
+FROM golang:1.9.1
 WORKDIR /go-builder/
 COPY hello-world.go .
 RUN CGO_ENABLED=0 GOOS=linux go build -o hello-world .
